<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Droidcon NYC 2016!</string>
    <string name="convention_id">61100</string>

    <string name="about_con_header">About Droidcon Albany</string>
    <!--TODO add link to sponsors-->
    <string name="about_con">
        Droidcon conferences around the world
        support the Android platform and create a
        global network for developers and companies.\n\nWe offer best-in-class presentations from
        leaders in all parts of the Android ecosystem,
        including core development, embedded
        solutions, augmented reality, business
        solutions, and games.
    </string>

    <string name="action_settings">Settings</string>

    <string name="network_error">Network problems...</string>
    <string name="no_user_code_error">User profile not found</string>

    <!-- drawer copy-->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="explore">Schedule</string>
    <string name="my_schedule">My agenda</string>
    <string name="chat_on_slack">Chat on Slack</string>
    <string name="slack_almost_there">Almost there...</string>
    <string name="slack_confirm">Yep, take me to Slack</string>
    <string name="slack_not_yet">Not yet</string>
    <string name="slack_error">Error opening Slack link</string>
    <string name="slack_dialog_title">You’ll need an account to join the DCNYC Slack team.</string>
    <string name="slack_dialog_text">Have you signed up to join the Slack team yet?</string>
    <string name="slack_dialog_no">Don\'t ask me again</string>

    <string name="map">Map</string>
    <string name="social">Social profiles</string>
    <string name="sponsors">Sponsors</string>
    <string name="about">About</string>

    <!-- welcome copy-->
    <string name="welcome_0_title">Welcome to Droidcon!</string>
    <string name="welcome_1_title">Plan ahead</string>
    <string name="welcome_2_title">Be yourself</string>
    <string name="welcome_3_title">Say hey to our sponsors ...</string>
    <string name="welcome_0_desc">This app will help you navigate the world\'s largest community-driven Android conference</string>
    <string name="welcome_1_desc">Quickly make and manage your schedule to stay on track</string>
    <string name="welcome_2_desc">Fill out your profile and connect with other attendees</string>
    <string name="welcome_3_desc">Sponsors are cool.</string>
    <string name="next">Next</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="select_an_account">Select an account</string>
    <string name="choose_account">Please choose an account to use:</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Continue</string>

    <!-- profile copy-->
    <string name="hint_name">Full name</string>
    <string name="hint_email">Email address</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_company">Company</string>
    <string name="hint_website">http://yoursite.com</string>
    <string name="hint_facebook">Facebook</string>
    <string name="hint_twitter">Twitter</string>
    <string name="hint_linkedIn">LinkedIn</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_bio">Bio</string>
    <string name="contact">Contact Info</string>
    <string name="privacy">Privacy</string>
    
    <!-- Event Detail -->
    <string name="event_venue_time" >%1$s, %2$s - %3$s</string>
    <string name="event_speaker_name" >%1$s, %2$s</string>
    <string name="event_track" >on the %1$s track</string>
    <string name="event_now" >This session is happening now</string>
    <string name="event_past" >This session has already ended</string>
    <string name="event_conflict" >This session conflicts with another session in your schedule</string>

    <string name="filter">Filter</string>
    <string name="about_app_header">About the app</string>
    <string name="about_app">
        The Droidcon app is coded in-house by the touchlab team.  Worked on by Liam, Izzy, Sam, Ramona and Kevin.\n\nIt’s a bit of an experiment, written largely in Kotlin, and including a new(ish) ORM framework. Fun stuff.\n\nThe code is open source, at:\nhttps://github.com/touchlab/DroidconApp
    </string>

    <string name="about_touch_header">About touchlab</string>
    <string name="about_touch">
        Touchlab is a developer founded and run
        development shop focused on building
        amazing Android experiences with great
        design as a foundational principle.\n\nWe’re a group of Android experts who believe
        that Android can and must be better.\n\nWe believe that what we built yesterday was
        great, but what we build with you tomorrow
        will be even better.\n\nAnd we’re currently hiring. Want to join a team
        where Android isn’t that other platform, where
        we care about pushing our favorite technology
        forward, and where you can get more involved
        with the community at large? Get in touch.\n\nhttp://touchlab.co\n\n
    </string>
    <string name="more">More</string>
    <string name="less">Less</string>

    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>

    <string name="notif_card_title">Session notification</string>
    <string name="notif_card_body">Turn on notifications for sessions in your schedule?</string>
    <string name="notif_card_accept">sure</string>
    <string name="notif_card_decline">no thanks</string>
    <string name="notif_title">Session starting soon</string>
    <string name="notif_body">"The \"%s\" session is starting soon!"</string>
    <string name="content_toggle_alerts">Toggle Session Alerts</string>
    <string name="conflict">conflict</string>
    <string name="hint_gPlus">Profile</string>

    <string name="lorem_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n\nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    </string>
    <string name="feedback">Feedback</string>
    <string name="live_stream">Stream archive</string>
    <string name="live_stream_now">Live now!</string>
    <string name="live_stream_loading">Live stream loading…</string>
    <string name="whoops">Whoops!</string>
    <string name="buy_ticket">Buy a ticket</string>

    <!-- content descriptions-->
    <string name="cd_live_now">live now</string>
    <string name="cd_sponsor_logos">sponsor logos</string>
    <string name="cd_about_section">about section</string>
    <string name="cd_navigation_icon">navigation icon</string>
    <string name="cd_profile_cover_image">profile cover image</string>
    <string name="cd_close_user_detail">close user detail</string>
    <string name="cd_event_description">event description</string>
    <string name="cd_stream_icon">stream icon</string>

    <string name="title_activity_user_detail">Profile</string>
    <string name="title_activity_sponsors">OUR AWESOME SPONSORS</string>
    <string name="sponsor_image">Sponsor Image</string>

    <string name="sponsors_tab_general">GENERAL&#160;</string>
    <string name="sponsors_tab_streaming">STREAMING&#160;</string>
    <string name="sponsors_tab_party">PARTY&#160;</string>

    <!-- URL -->
    <string name="sponsor_image_url">file:///android_asset/sponsors/%1$s.png</string>

    <!-- URL -->
    <string name="sponsor_image_url">file:///android_asset/sponsors/%1$s.png</string>

</resources>
