<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--TODO update icon asset-->

    <ImageView
        android:id="@+id/icon"
        android:src="@drawable/vic_info_outline_black_24dp"
        android:contentDescription="@string/cd_about_section"
        style="@style/about_icon"/>
    
    <TextView
        android:id="@+id/header"
        android:layout_toEndOf="@id/icon"
        android:text="@string/about_app_header"
        style="@style/about_header" />

    <TextView
        android:id="@+id/body"
        android:layout_toEndOf="@id/icon"
        android:layout_below="@+id/header"
        android:text="@string/about_app"
        android:autoLink="web"
        style="@style/about_body"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_toEndOf="@id/icon"
        android:layout_below="@+id/body"
        android:visibility="gone"
        android:contentDescription="@string/cd_sponsor_logos"
        style="@style/about_logo"/>

</RelativeLayout>
